@@ -15,7 +15,7 @@ namespace Mono.Cecil {
 	using Mono.Cecil.Binary;
 
 	public enum AssemblyKind {
-		Dll = SubSystem.Native,
+		Dll = SubSystem.WindowsCui,
 		Console = SubSystem.WindowsCui,
 		Windows = SubSystem.WindowsGui
 	}
