@@ -1,5 +1,16 @@
 2005-08-09  Jb Evain  <jbevain@gmail.com>
 
+	* Mono.Cecil/AssemblyKind.cs
+	  CodeGen/templates/ImageWriter.cs
+	  CodeGen/templates/ImageReader.cs
+	  Mono.Cecil.Metadata/MetadataWriter.cs
+	  Mono.Cecil.Binary/ImageWriter.cs
+	  Mono.Cecil.Binary/ImageInitializer.cs
+	  Mono.Cecil.Binary/ImageReader.cs:
+		Lots of little fixes. Now dumpbin is coherent
+		compared with an assembly emitted with csc or mcs
+		but still not yet compatible with .net.
+
 	* Mono.Cecil.Signatures/SignatureReader.cs:
 		Fix an array out of range while trying to read
 		fixed arrays signatures
